# rusty-key

./: .gitignore  Cargo.toml  README.md  config.toml
assets/geometries/: full-ortho.toml  us-pc.toml
assets/layouts/: beakl_15  colemak  dvorak  halmak_21  qwerty  the_1  workman
src/: calculator.rs  config.rs  dna.rs  events.rs  evolution.rs  frequency.rs  generation.rs  geometry.rs  keyboard.rs  keys.rs  layout.rs  layouts.rs  main.rs  model.rs  mutator.rs  parser.rs  population.rs  preservative.rs  profiler.rs  selection.rs  source.rs  splicer.rs  stats.rs  summary.rs  ui.rs
