[package]
name = "rusty-key"
version = "0.1.0"
authors = ["Nikolay Nemshilov <nemshilov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tui = "0.15.0"
termion = "1.5"
hashbrown = "0.11.2"
strum = "0.21.0"
strum_macros = "0.21.1"
lazy_static = "1.4.0"
once_cell = "1.8.0"
rayon = "1.5"
